# bentoml-extensions

./: .gitignore  .pdm-python  .pre-commit-config.yaml  CMakeLists.txt  README.md  asdf.txt  light-model-transformer.dockerfile  pyproject.toml
.github/workflows/: deploy_docs.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/guides/: index.rst  intel-optimized-build.rst
docs/source/use-cases/: featurestore.rst  intel-optimized-runner.rst  offline-inference.rst
examples/: docker-compose.yaml
examples/linear_regression/: aerospike_service.py  redis_service.py  service.py
examples/linear_regression2/: aerospike_service.py  redis_service.py  service.py  train.py
src/bentoml_extensions/: __init__.py
src/bentoml_extensions/feature_store/: __init__.py
src/bentoml_extensions/feature_store/aerospike/: __init__.py  repository.py
src/bentoml_extensions/feature_store/backend/: __init__.py
src/bentoml_extensions/feature_store/backend/aerospike/: __init__.py
src/bentoml_extensions/feature_store/backend/aerospike_backend/: __init__.py  repository.py  settings.py
src/bentoml_extensions/feature_store/backend/redis_backend/: __init__.py  settings.py
src/bentomlx/: __init__.py
src/bentomlx/feature_repo/: __init__.py  festurestore.py  settings.py
src/bentomlx/feature_repo/backend/aerospike_backend/: __init__.py  repository.py
src/bentomlx/feature_repo/backend/base_backend/: repository.py
src/bentomlx/feature_repo/backend/redis_backend/: __init__.py
src/bentomlx/featurestore/: __init__.py  festurestore.py  settings.py
src/bentomlx/featurestore/backend/: repository.py
src/bentomlx/featurestore/backend/aerospike_backend/: __init__.py  repository.py
src/bentomlx/featurestore/distributed_svc/: aerospike.py  repository.py
src/bentomlx/featurestore/runner/: __init__.py  aerospike.py  redis.py  repository.py
src/bentomlx/intel/custom_ops/_core/: CMakeLists.txt
src/bentomlx/intel/custom_ops/_core/bert_layer/: bert_context.h  bert_layer_quant_int8.h  dnnl_data.hpp  dnnl_ops.hpp  quant_factors.hpp
src/bentomlx/intel/custom_ops/_core/pytorch_op/: CMakeLists.txt
src/bentomlx/intel/custom_ops/bert_op/: __init__.py
src/bentomlx/intel/custom_ops/bert_op/torch/: bert_op_torch.py
tests/: redis_async.py  redis_hello.py  redis_mset.py  test_bento.py  test_custom_bert_op.py  test_featurestore_runner.py  test_featurestore_service.py  test_ipex_runner.py  tttest_indexing.py
